Add subpoints that appear after title typing is complete

--- a/index.html
+++ b/index.html
@@ -250,6 +250,16 @@
                         <span class="title-line-1">Почему нам доверяют</span>
                         <span class="title-line-2">тысячи автовладельцев</span>
                     </h2>
+                    <div class="subpoints">
+                        <div class="subpoint">
+                            <h3>Полная проверка:</h3>
+                            <p>История аварий, залоги, пробег, сервис, отзывы — вся ключевая информация в одном отчёте.</p>
+                        </div>
+                        <div class="subpoint">
+                            <h3>Доверие клиентов:</h3>
+                            <p>Тысячи пользователей полагаются на наши отчёты при каждой сделке с авто.</p>
+                        </div>
+                    </div>
                 </div>
                 <div class="second-screen-right">
                     <img src="images/honda.webp" alt="iPhone with Honda CR-V Report" class="second-screen-image">
