Add third subpoint as requested by user

--- a/index.html
+++ b/index.html
@@ -259,6 +259,10 @@
                             <h3>Доверие клиентов:</h3>
                             <p>Тысячи пользователей полагаются на наши отчёты при каждой сделке с авто.</p>
                         </div>
+                        <div class="subpoint">
+                            <h3>Полная проверка:</h3>
+                            <p>История аварий, залоги, пробег, сервис, отзывы — вся ключевая информация в одном отчёте.</p>
+                        </div>
                     </div>
                 </div>
                 <div class="second-screen-right">
