Add logo images next to each subpoint with proportional sizing

--- a/index.html
+++ b/index.html
@@ -252,16 +252,31 @@
                     </h2>
                     <div class="subpoints">
                         <div class="subpoint">
-                            <h3>Полная проверка:</h3>
-                            <p>История аварий, залоги, пробег, сервис, отзывы — вся ключевая информация в одном отчёте.</p>
+                            <div class="subpoint-content">
+                                <img src="img/logo.svg" alt="Logo" class="subpoint-logo">
+                                <div class="subpoint-text">
+                                    <h3>Полная проверка:</h3>
+                                    <p>История аварий, залоги, пробег, сервис, отзывы — вся ключевая информация в одном отчёте.</p>
+                                </div>
+                            </div>
                         </div>
                         <div class="subpoint">
-                            <h3>Доверие клиентов:</h3>
-                            <p>Тысячи пользователей полагаются на наши отчёты при каждой сделке с авто.</p>
+                            <div class="subpoint-content">
+                                <img src="img/logo.svg" alt="Logo" class="subpoint-logo">
+                                <div class="subpoint-text">
+                                    <h3>Доверие клиентов:</h3>
+                                    <p>Тысячи пользователей полагаются на наши отчёты при каждой сделке с авто.</p>
+                                </div>
+                            </div>
                         </div>
                         <div class="subpoint">
-                            <h3>Полная проверка:</h3>
-                            <p>История аварий, залоги, пробег, сервис, отзывы — вся ключевая информация в одном отчёте.</p>
+                            <div class="subpoint-content">
+                                <img src="img/logo.svg" alt="Logo" class="subpoint-logo">
+                                <div class="subpoint-text">
+                                    <h3>Полная проверка:</h3>
+                                    <p>История аварий, залоги, пробег, сервис, отзывы — вся ключевая информация в одном отчёте.</p>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
