Fix logo filename to logo-vin-trust.png

--- a/index.html
+++ b/index.html
@@ -253,7 +253,7 @@
                     <div class="subpoints">
                         <div class="subpoint">
                             <div class="subpoint-content">
-                                <img src="images/logo.svg" alt="Logo" class="subpoint-logo">
+                                <img src="images/logo-vin-trust.png" alt="Logo" class="subpoint-logo">
                                 <div class="subpoint-text">
                                     <h3>Полная проверка:</h3>
                                     <p>История аварий, залоги, пробег, сервис, отзывы — вся ключевая информация в одном отчёте.</p>
@@ -262,7 +262,7 @@
                         </div>
                         <div class="subpoint">
                             <div class="subpoint-content">
-                                <img src="images/logo.svg" alt="Logo" class="subpoint-logo">
+                                <img src="images/logo-vin-trust.png" alt="Logo" class="subpoint-logo">
                                 <div class="subpoint-text">
                                     <h3>Доверие клиентов:</h3>
                                     <p>Тысячи пользователей полагаются на наши отчёты при каждой сделке с авто.</p>
@@ -271,7 +271,7 @@
                         </div>
                         <div class="subpoint">
                             <div class="subpoint-content">
-                                <img src="images/logo.svg" alt="Logo" class="subpoint-logo">
+                                <img src="images/logo-vin-trust.png" alt="Logo" class="subpoint-logo">
                                 <div class="subpoint-text">
                                     <h3>Полная проверка:</h3>
                                     <p>История аварий, залоги, пробег, сервис, отзывы — вся ключевая информация в одном отчёте.</p>
