Change second line of title to 'при покупке подержаного авто'

--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@
                 <div class="second-screen-left">
                     <h2 class="second-screen-title">
                         <span class="title-line-1">Почему нам доверяют</span>
-                        <span class="title-line-2">тысячи автовладельцев</span>
+                        <span class="title-line-2">при покупке подержаного авто</span>
                     </h2>
                     <div class="subpoints">
                         <div class="subpoint">
