Translate state selection placeholder to English

--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
                         <!-- Plate Mode -->
                         <div class="mode-content active" id="plate-mode">
                             <select class="state-select">
-                                <option value="">Выберите штат</option>
+                                <option value="">Select State</option>
                                 <option value="AL">Alabama</option>
                                 <option value="AK">Alaska</option>
                                 <option value="AZ">Arizona</option>
