Translate VIN input placeholder to English

--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
                     <div class="form-content">
                         <!-- VIN Mode -->
                         <div class="mode-content" id="vin-mode">
-                            <input type="text" class="vin-input" placeholder="Введите VIN код" maxlength="17">
+                            <input type="text" class="vin-input" placeholder="Enter VIN code" maxlength="17">
         </div>
                         
                         <!-- Plate Mode -->
