Add CSS text-transform uppercase and inline styles for reliable auto-caps

--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
                     <div class="form-content">
                         <!-- VIN Mode -->
                         <div class="mode-content" id="vin-mode">
-                            <input type="text" class="vin-input" placeholder="Enter VIN code" maxlength="17">
+                            <input type="text" class="vin-input" placeholder="Enter VIN code" maxlength="17" style="text-transform: uppercase;">
         </div>
                         
                         <!-- Plate Mode -->
@@ -227,7 +227,7 @@
                                 <option value="WY">Wyoming</option>
                                 <option value="DC">District of Columbia</option>
                             </select>
-                            <input type="text" class="plate-input" placeholder="License Plate" maxlength="8">
+                            <input type="text" class="plate-input" placeholder="License Plate" maxlength="8" style="text-transform: uppercase;">
             </div>
                         
                         <button class="search-btn">
