Change '7-Day Unlimited' to 'Price' in comparison table

--- a/index.html
+++ b/index.html
@@ -1365,7 +1365,7 @@
                         </div>
                         
                         <div class="comparison-row">
-                            <div class="comparison-cell feature-cell">7-Day Unlimited</div>
+                            <div class="comparison-cell feature-cell">Price</div>
                             <div class="comparison-cell vin-trust-cell">
                                 <span class="price-highlight">$3</span>
                             </div>
