Redesign feature cells as card-style elements with green icons

--- a/index.html
+++ b/index.html
@@ -1326,8 +1326,8 @@
                         
                         <div class="comparison-row">
                             <div class="comparison-cell feature-cell">
-                                <span class="feature-icon">📄</span>
-                                Vehicle History
+                                <span class="feature-icon">📋</span>
+                                Vehicle History Reports
                             </div>
                             <div class="comparison-cell vin-trust-cell">
                                 <span class="check-mark">✓</span>
@@ -1339,8 +1339,8 @@
                         
                         <div class="comparison-row">
                             <div class="comparison-cell feature-cell">
-                                <span class="feature-icon">♾️</span>
-                                Unlimited Reports
+                                <span class="feature-icon">🔍</span>
+                                Unlimited Report Lookups
                             </div>
                             <div class="comparison-cell vin-trust-cell">
                                 <span class="check-mark">✓</span>
@@ -1366,7 +1366,7 @@
                         <div class="comparison-row">
                             <div class="comparison-cell feature-cell">
                                 <span class="feature-icon">📞</span>
-                                24/7 Support
+                                24/7 Phone Support
                             </div>
                             <div class="comparison-cell vin-trust-cell">
                                 <span class="check-mark">✓</span>
