Fix feature cells design to simple list style

--- a/index.html
+++ b/index.html
@@ -1326,7 +1326,7 @@
                         
                         <div class="comparison-row">
                             <div class="comparison-cell feature-cell">
-                                <span class="feature-icon">📋</span>
+                                <span class="feature-icon">📄</span>
                                 Vehicle History Reports
                             </div>
                             <div class="comparison-cell vin-trust-cell">
@@ -1352,7 +1352,7 @@
                         
                         <div class="comparison-row">
                             <div class="comparison-cell feature-cell">
-                                <span class="feature-icon">🛠️</span>
+                                <span class="feature-icon">🔧</span>
                                 Free Tools
                             </div>
                             <div class="comparison-cell vin-trust-cell">
