Remove Features text completely

--- a/index.html
+++ b/index.html
@@ -1319,7 +1319,7 @@
                     
                     <div class="comparison-table">
                         <div class="comparison-row header-row">
-                            <div class="comparison-cell feature-cell header-feature">Features</div>
+                            <div class="comparison-cell feature-cell header-feature"></div>
                             <div class="comparison-cell vin-trust-cell">VIN TRUST</div>
                             <div class="comparison-cell carfax-cell">Carfax</div>
                         </div>
