Create image-style headers with text and colored status boxes

--- a/index.html
+++ b/index.html
@@ -1318,8 +1318,18 @@
                         
                         <div class="column-headers">
                             <div class="column-header feature-header"></div>
-                            <div class="column-header vin-trust-header">VIN TRUST</div>
-                            <div class="column-header carfax-header">Carfax</div>
+                            <div class="column-header vin-trust-header">
+                                <span class="header-text">VIN TRUST</span>
+                                <div class="header-status-box vin-trust-status">
+                                    <span class="status-checkmark">✅</span>
+                                </div>
+                            </div>
+                            <div class="column-header carfax-header">
+                                <span class="header-text">Carfax</span>
+                                <div class="header-status-box carfax-status">
+                                    <span class="status-checkmark">✅</span>
+                                </div>
+                            </div>
                         </div>
           </div>
                     
