Add VIN TRUST label above first green cell

--- a/index.html
+++ b/index.html
@@ -1339,6 +1339,7 @@
                                 Vehicle History Reports
                             </div>
                             <div class="comparison-cell vin-trust-cell">
+                                <div class="cell-label">VIN TRUST</div>
                                 <span class="check-mark">✓</span>
                             </div>
                             <div class="comparison-cell carfax-cell">
