Move VIN TRUST and Carfax labels above the table, not inside cells

--- a/index.html
+++ b/index.html
@@ -1334,12 +1334,17 @@
           </div>
                     
                     <div class="comparison-table">
+                        <div class="table-labels">
+                            <div class="table-label feature-label"></div>
+                            <div class="table-label vin-trust-label">VIN TRUST</div>
+                            <div class="table-label carfax-label">Carfax</div>
+                        </div>
+                        
                         <div class="comparison-row">
                             <div class="comparison-cell feature-cell vehicle-history">
                                 Vehicle History Reports
                             </div>
                             <div class="comparison-cell vin-trust-cell">
-                                <div class="cell-label">VIN TRUST</div>
                                 <span class="check-mark">✓</span>
                             </div>
                             <div class="comparison-cell carfax-cell">
