--- a/index.html
+++ b/index.html
@@ -1313,7 +1313,7 @@
                 <!-- Left Column: Comparison Table -->
                 <div class="comparison-left">
                     <div class="comparison-header">
-                        <h2 class="comparison-title">Why Choose VIN TRUST Over Carfax?</h2>
+                        <h2 class="comparison-title">Плати меньше — получай больше с VIN TRUST</h2>
                         <p class="comparison-subtitle">Get the same data at a fraction of the cost</p>
                         
                         <div class="column-headers">
