Make title three lines

--- a/index.html
+++ b/index.html
@@ -1313,7 +1313,11 @@
                 <!-- Left Column: Comparison Table -->
                 <div class="comparison-left">
                     <div class="comparison-header">
-                        <h2 class="comparison-title">Плати меньше — получай больше с VIN TRUST</h2>
+                        <h2 class="comparison-title">
+                            Плати меньше<br>
+                            — получай больше<br>
+                            с VIN TRUST
+                        </h2>
                         
           </div>
                     
