Make second line include VIN TRUST

--- a/index.html
+++ b/index.html
@@ -1315,8 +1315,7 @@
                     <div class="comparison-header">
                         <h2 class="comparison-title">
                             Плати меньше<br>
-                            — получай больше<br>
-                            с VIN TRUST
+                            — получай больше с VIN TRUST
                         </h2>
                         
           </div>
