--- a/index.html
+++ b/index.html
@@ -1382,8 +1382,17 @@
                     </div>
                 </div>
                 
-                <!-- Right Column: Empty -->
+                <!-- Right Column: Black Panel + Form -->
                 <div class="comparison-right">
+                    <div class="black-panel">
+                        <div class="panel-header">
+                            <h3 class="panel-title">UNLIMITED SEARCHES</h3>
+                            <div class="panel-price">ONLY $3</div>
+                        </div>
+                        <div class="panel-features">
+                            <span>Accidents | Mileage | Title Records | Recalls | Value | Specs | And More!</span>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
