Split UNLIMITED SEARCHES into two lines

--- a/index.html
+++ b/index.html
@@ -1386,7 +1386,7 @@
                 <div class="comparison-right">
                     <div class="black-panel">
                         <div class="panel-header">
-                            <h3 class="panel-title">UNLIMITED SEARCHES</h3>
+                            <h3 class="panel-title">UNLIMITED<br>SEARCHES</h3>
                             <div class="panel-price">ONLY $3</div>
                         </div>
                         <div class="panel-features">
