Move second part of features to new line

--- a/index.html
+++ b/index.html
@@ -1390,7 +1390,7 @@
                             <div class="panel-price">ONLY $3</div>
                         </div>
                         <div class="panel-features">
-                            <span>Accidents | Mileage | Title Records | Recalls | Value | Specs | And More!</span>
+                            <span>Accidents | Mileage | Title Records<br>| Recalls | Value | Specs | And More!</span>
                         </div>
                         
                         <div class="search-form-container">
