Fix VIN cursor in comparison screen - add unique IDs

--- a/index.html
+++ b/index.html
@@ -1402,12 +1402,12 @@
                 <div class="search-form">
                     <div class="form-content">
                         <!-- VIN Mode -->
-                        <div class="mode-content" id="vin-mode">
+                        <div class="mode-content" id="comparison-vin-mode">
                             <input type="text" class="vin-input" placeholder="Enter VIN code" maxlength="17" style="text-transform: uppercase;">
       </div>
                         
                         <!-- Plate Mode -->
-                        <div class="mode-content active" id="plate-mode">
+                        <div class="mode-content active" id="comparison-plate-mode">
                             <select class="state-select">
                                 <option value="">Select State</option>
                                 <option value="AL">Alabama</option>
