Fix states order - only top 5 most populous first, rest alphabetical

--- a/index.html
+++ b/index.html
@@ -175,58 +175,59 @@
                         <div class="mode-content active" id="plate-mode">
                             <select class="state-select">
                                 <option value="">Select State</option>
-                                <!-- Most populous states (highlighted in blue) -->
+                                <!-- Top 5 most populous states (highlighted in blue) -->
                                 <option value="CA" class="populous-state">California</option>
                                 <option value="TX" class="populous-state">Texas</option>
                                 <option value="FL" class="populous-state">Florida</option>
                                 <option value="NY" class="populous-state">New York</option>
                                 <option value="PA" class="populous-state">Pennsylvania</option>
-                                <option value="IL" class="populous-state">Illinois</option>
-                                <option value="OH" class="populous-state">Ohio</option>
-                                <option value="GA" class="populous-state">Georgia</option>
-                                <option value="NC" class="populous-state">North Carolina</option>
-                                <option value="MI" class="populous-state">Michigan</option>
-                                <option value="NJ" class="populous-state">New Jersey</option>
-                                <option value="VA" class="populous-state">Virginia</option>
-                                <option value="WA" class="populous-state">Washington</option>
-                                <option value="AZ" class="populous-state">Arizona</option>
-                                <option value="MA" class="populous-state">Massachusetts</option>
-                                <option value="TN" class="populous-state">Tennessee</option>
-                                <option value="IN" class="populous-state">Indiana</option>
-                                <option value="MO" class="populous-state">Missouri</option>
-                                <option value="MD" class="populous-state">Maryland</option>
-                                <option value="WI" class="populous-state">Wisconsin</option>
-                                <option value="CO" class="populous-state">Colorado</option>
-                                <option value="MN" class="populous-state">Minnesota</option>
-                                <option value="SC" class="populous-state">South Carolina</option>
-                                <option value="AL" class="populous-state">Alabama</option>
-                                <option value="LA" class="populous-state">Louisiana</option>
-                                <option value="KY" class="populous-state">Kentucky</option>
-                                <option value="OR" class="populous-state">Oregon</option>
-                                <option value="OK" class="populous-state">Oklahoma</option>
-                                <option value="CT" class="populous-state">Connecticut</option>
-                                <option value="UT" class="populous-state">Utah</option>
-                                <option value="IA" class="populous-state">Iowa</option>
-                                <option value="NV" class="populous-state">Nevada</option>
-                                <option value="AR" class="populous-state">Arkansas</option>
-                                <option value="MS" class="populous-state">Mississippi</option>
-                                <option value="KS" class="populous-state">Kansas</option>
-                                <option value="NM" class="populous-state">New Mexico</option>
-                                <option value="NE" class="populous-state">Nebraska</option>
-                                <option value="WV" class="populous-state">West Virginia</option>
-                                <option value="ID" class="populous-state">Idaho</option>
-                                <option value="HI" class="populous-state">Hawaii</option>
-                                <option value="NH" class="populous-state">New Hampshire</option>
-                                <option value="ME" class="populous-state">Maine</option>
-                                <option value="MT" class="populous-state">Montana</option>
-                                <option value="RI" class="populous-state">Rhode Island</option>
-                                <option value="DE" class="populous-state">Delaware</option>
-                                <option value="SD" class="populous-state">South Dakota</option>
-                                <option value="ND" class="populous-state">North Dakota</option>
-                                <option value="AK" class="populous-state">Alaska</option>
-                                <option value="VT" class="populous-state">Vermont</option>
-                                <option value="WY" class="populous-state">Wyoming</option>
-                                <option value="DC" class="populous-state">District of Columbia</option>
+                                <!-- Rest in alphabetical order -->
+                                <option value="AL">Alabama</option>
+                                <option value="AK">Alaska</option>
+                                <option value="AZ">Arizona</option>
+                                <option value="AR">Arkansas</option>
+                                <option value="CO">Colorado</option>
+                                <option value="CT">Connecticut</option>
+                                <option value="DE">Delaware</option>
+                                <option value="GA">Georgia</option>
+                                <option value="HI">Hawaii</option>
+                                <option value="ID">Idaho</option>
+                                <option value="IL">Illinois</option>
+                                <option value="IN">Indiana</option>
+                                <option value="IA">Iowa</option>
+                                <option value="KS">Kansas</option>
+                                <option value="KY">Kentucky</option>
+                                <option value="LA">Louisiana</option>
+                                <option value="ME">Maine</option>
+                                <option value="MD">Maryland</option>
+                                <option value="MA">Massachusetts</option>
+                                <option value="MI">Michigan</option>
+                                <option value="MN">Minnesota</option>
+                                <option value="MS">Mississippi</option>
+                                <option value="MO">Missouri</option>
+                                <option value="MT">Montana</option>
+                                <option value="NE">Nebraska</option>
+                                <option value="NV">Nevada</option>
+                                <option value="NH">New Hampshire</option>
+                                <option value="NJ">New Jersey</option>
+                                <option value="NM">New Mexico</option>
+                                <option value="NC">North Carolina</option>
+                                <option value="ND">North Dakota</option>
+                                <option value="OH">Ohio</option>
+                                <option value="OK">Oklahoma</option>
+                                <option value="OR">Oregon</option>
+                                <option value="RI">Rhode Island</option>
+                                <option value="SC">South Carolina</option>
+                                <option value="SD">South Dakota</option>
+                                <option value="TN">Tennessee</option>
+                                <option value="UT">Utah</option>
+                                <option value="VT">Vermont</option>
+                                <option value="VA">Virginia</option>
+                                <option value="WA">Washington</option>
+                                <option value="WV">West Virginia</option>
+                                <option value="WI">Wisconsin</option>
+                                <option value="WY">Wyoming</option>
+                                <option value="DC">District of Columbia</option>
                             </select>
                             <input type="text" class="plate-input" placeholder="License Plate" maxlength="8" style="text-transform: uppercase;">
           </div>
@@ -1411,58 +1412,59 @@
                         <div class="mode-content active" id="comparison-plate-mode">
                             <select class="state-select">
                                 <option value="">Select State</option>
-                                <!-- Most populous states (highlighted in blue) -->
+                                <!-- Top 5 most populous states (highlighted in blue) -->
                                 <option value="CA" class="populous-state">California</option>
                                 <option value="TX" class="populous-state">Texas</option>
                                 <option value="FL" class="populous-state">Florida</option>
                                 <option value="NY" class="populous-state">New York</option>
                                 <option value="PA" class="populous-state">Pennsylvania</option>
-                                <option value="IL" class="populous-state">Illinois</option>
-                                <option value="OH" class="populous-state">Ohio</option>
-                                <option value="GA" class="populous-state">Georgia</option>
-                                <option value="NC" class="populous-state">North Carolina</option>
-                                <option value="MI" class="populous-state">Michigan</option>
-                                <option value="NJ" class="populous-state">New Jersey</option>
-                                <option value="VA" class="populous-state">Virginia</option>
-                                <option value="WA" class="populous-state">Washington</option>
-                                <option value="AZ" class="populous-state">Arizona</option>
-                                <option value="MA" class="populous-state">Massachusetts</option>
-                                <option value="TN" class="populous-state">Tennessee</option>
-                                <option value="IN" class="populous-state">Indiana</option>
-                                <option value="MO" class="populous-state">Missouri</option>
-                                <option value="MD" class="populous-state">Maryland</option>
-                                <option value="WI" class="populous-state">Wisconsin</option>
-                                <option value="CO" class="populous-state">Colorado</option>
-                                <option value="MN" class="populous-state">Minnesota</option>
-                                <option value="SC" class="populous-state">South Carolina</option>
-                                <option value="AL" class="populous-state">Alabama</option>
-                                <option value="LA" class="populous-state">Louisiana</option>
-                                <option value="KY" class="populous-state">Kentucky</option>
-                                <option value="OR" class="populous-state">Oregon</option>
-                                <option value="OK" class="populous-state">Oklahoma</option>
-                                <option value="CT" class="populous-state">Connecticut</option>
-                                <option value="UT" class="populous-state">Utah</option>
-                                <option value="IA" class="populous-state">Iowa</option>
-                                <option value="NV" class="populous-state">Nevada</option>
-                                <option value="AR" class="populous-state">Arkansas</option>
-                                <option value="MS" class="populous-state">Mississippi</option>
-                                <option value="KS" class="populous-state">Kansas</option>
-                                <option value="NM" class="populous-state">New Mexico</option>
-                                <option value="NE" class="populous-state">Nebraska</option>
-                                <option value="WV" class="populous-state">West Virginia</option>
-                                <option value="ID" class="populous-state">Idaho</option>
-                                <option value="HI" class="populous-state">Hawaii</option>
-                                <option value="NH" class="populous-state">New Hampshire</option>
-                                <option value="ME" class="populous-state">Maine</option>
-                                <option value="MT" class="populous-state">Montana</option>
-                                <option value="RI" class="populous-state">Rhode Island</option>
-                                <option value="DE" class="populous-state">Delaware</option>
-                                <option value="SD" class="populous-state">South Dakota</option>
-                                <option value="ND" class="populous-state">North Dakota</option>
-                                <option value="AK" class="populous-state">Alaska</option>
-                                <option value="VT" class="populous-state">Vermont</option>
-                                <option value="WY" class="populous-state">Wyoming</option>
-                                <option value="DC" class="populous-state">District of Columbia</option>
+                                <!-- Rest in alphabetical order -->
+                                <option value="AL">Alabama</option>
+                                <option value="AK">Alaska</option>
+                                <option value="AZ">Arizona</option>
+                                <option value="AR">Arkansas</option>
+                                <option value="CO">Colorado</option>
+                                <option value="CT">Connecticut</option>
+                                <option value="DE">Delaware</option>
+                                <option value="GA">Georgia</option>
+                                <option value="HI">Hawaii</option>
+                                <option value="ID">Idaho</option>
+                                <option value="IL">Illinois</option>
+                                <option value="IN">Indiana</option>
+                                <option value="IA">Iowa</option>
+                                <option value="KS">Kansas</option>
+                                <option value="KY">Kentucky</option>
+                                <option value="LA">Louisiana</option>
+                                <option value="ME">Maine</option>
+                                <option value="MD">Maryland</option>
+                                <option value="MA">Massachusetts</option>
+                                <option value="MI">Michigan</option>
+                                <option value="MN">Minnesota</option>
+                                <option value="MS">Mississippi</option>
+                                <option value="MO">Missouri</option>
+                                <option value="MT">Montana</option>
+                                <option value="NE">Nebraska</option>
+                                <option value="NV">Nevada</option>
+                                <option value="NH">New Hampshire</option>
+                                <option value="NJ">New Jersey</option>
+                                <option value="NM">New Mexico</option>
+                                <option value="NC">North Carolina</option>
+                                <option value="ND">North Dakota</option>
+                                <option value="OH">Ohio</option>
+                                <option value="OK">Oklahoma</option>
+                                <option value="OR">Oregon</option>
+                                <option value="RI">Rhode Island</option>
+                                <option value="SC">South Carolina</option>
+                                <option value="SD">South Dakota</option>
+                                <option value="TN">Tennessee</option>
+                                <option value="UT">Utah</option>
+                                <option value="VT">Vermont</option>
+                                <option value="VA">Virginia</option>
+                                <option value="WA">Washington</option>
+                                <option value="WV">West Virginia</option>
+                                <option value="WI">Wisconsin</option>
+                                <option value="WY">Wyoming</option>
+                                <option value="DC">District of Columbia</option>
                             </select>
                             <input type="text" class="plate-input" placeholder="License Plate" maxlength="8" style="text-transform: uppercase;">
           </div>
