Change main title to 'Know a Car's Real Story — Before You Spend a Cent'

--- a/index.html
+++ b/index.html
@@ -152,8 +152,7 @@
     <section class="hero-section">
         <div class="hero-container">
             <h1 class="main-title">
-                Complete <span class="yellow-text">VIN</span> REPORT<br>
-                Just <span class="yellow-text">$3</span>
+                Know a Car's Real Story — Before You Spend a Cent
             </h1>
             
             <p class="subtitle">Don't risk your money — check the real car history before buying.</p>
