Change subtitle to detailed VIN report description

--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
                 Know a Car's Real Story — Before You Spend a Cent
             </h1>
             
-            <p class="subtitle">Don't risk your money — check the real car history before buying.</p>
+            <p class="subtitle">Uncover accidents, hidden damage, liens, mileage fraud, and more — all in one official VIN report for just $3.</p>
             
             <div class="search-form-container">
                 <div class="mode-buttons">
