Change title to 3 lines and restore header to original position

--- a/index.html
+++ b/index.html
@@ -152,7 +152,9 @@
     <section class="hero-section">
         <div class="hero-container">
             <h1 class="main-title">
-                Know a Car's Real Story — Before You Spend a Cent
+                Know a Car's Real Story<br>
+                — Before You Spend<br>
+                a Cent
             </h1>
             
             <p class="subtitle">Uncover accidents, hidden damage, liens, mileage fraud, and more — all in one official VIN report for just $3.</p>
