Change all form buttons to 'Get My Report' with small checkmark

--- a/index.html
+++ b/index.html
@@ -234,8 +234,8 @@
           </div>
                         
                         <button class="search-btn">
-                            <span>Check</span>
-                            <span>→</span>
+                            <span>Get My Report</span>
+                            <span>✓</span>
                         </button>
         </div>
             </div>
@@ -1471,8 +1471,8 @@
           </div>
                         
                         <button class="search-btn">
-                            <span>Check</span>
-                            <span>→</span>
+                            <span>Get My Report</span>
+                            <span>✓</span>
                         </button>
         </div>
             </div>
